Update latest edition.